adicionando banco de dados para a sprint atualizado

--- a/sprint1/Bruno/simulador_financeiro.html
+++ b/sprint1/Bruno/simulador_financeiro.html
@@ -10,10 +10,7 @@
 </head>
 
 <body>
-    <h2 class="titulo">Olá, somos a X <i> corporation </i></h2><br><br>
-    <p>Somos umas empresa que monitora temperaturas e umidade em armazens de Soja</p>
-    <p>Com o monitoramento constante, é possível diminuir as perdas e, portanto, aumentar o seu lucro</p>
-    <p>Quer fazer uma simulação do quanto a sua safra pode aumentar? Insiras as informações nos espaços a seguir:</p><br>
+    <h2 class="titulo">Olá, somos a SojaTec</h2><br><br>
 
     <p>Digite quantas toneladas é a sua produção anual:</p>
     <input type="text" id="ipt_safra"><br>
